<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Labo1</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="activity_main_txt_nameHint">Please enter your name</string>
    <string name="activity_main_txt_btSubmit">Generate my badge</string>
    <string name="activity_main_txt_btConfig">Config</string>
    <string name="activity_main_txt_btAbout">About</string>
    
    <string name="activity_badge_txt_hello">Hello</string>
    <string name="activity_badge_txt_mynameis">my name is</string>
    <string name="activity_badge_txt_namestub">Anonymous</string>
    
    <string name="pref_key_badgeBackgroundColor">prefBackgroundColor</string>
    <string name="pref_key_badgeShowPicture">prefShowPicture</string>
    <string name="pref_key_badgeShowLocation">prefShowLocation</string>
    
    <string name="title_activity_take_picture">TakePictureActivity</string>

    <string name="menu_picture_settings">Settings</string>
    <string name="menu_picture_download">Download from internet</string>
    <string name="menu_picture_from_gallery">Pick from gallery</string>
    <string name="menu_picture_camera">Capture from camera</string>
    
    <string name="badge_txt_locationStub">LOC: N45 30.55319 W73 33.294</string>
    <string name="badge_img_user_image_desc">User Image</string>
    
    <string name="config_badge_color">Badge Color</string>
    <string name="config_badge_color_description">Define the background color of the badge</string>
    <string name="config_badge_color_hint">Select badge color</string>
    <string name="config_show_user_picture">Show user picture</string>
    <string name="config_show_user_picture_description">Will display a picture on the badge</string>
    <string name="config_show_location">Show location</string>
    <string name="config_show_gps_coordinate_on_badge">Show GPS coordinate on badge</string>
        
</resources>