<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_picture_from_download"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_picture_download"/>
    <item
        android:id="@+id/menu_picture_from_gallery"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_picture_from_gallery"/>
    <item
        android:id="@+id/menu_picture_from_camera"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_picture_camera"/>
        
    <item
        android:id="@+id/menu_launch_config"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:onClick="launchConfigActivity"
        android:title="@string/menu_picture_settings"/>

</menu>