<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/whiteTextSmall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/badge_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/red"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_badge_txt_hello"
            android:textAppearance="@style/whiteTextLarge"
            android:shadowColor="@color/black"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="2.0"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_badge_txt_mynameis"
            android:textAppearance="@style/whiteTextSmall"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/badge_layout_middle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/badge_img_userPicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/photo" 
            android:contentDescription="@string/badge_img_user_image_desc"/>

        <TextView
            android:id="@+id/badge_txt_displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_badge_txt_namestub"
            android:textSize="56sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/badge_layout_bottom"
        style="@style/whiteTextSmall"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/red"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/badge_txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/badge_txt_locationStub"
            android:textAppearance="@style/whiteTextSmall" />

    </LinearLayout>

</LinearLayout>